smartfreelance-backend/application-contract-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-contract-service
  labels:
    app: application-contract-service
spec:
  type: ClusterIP
  selector:
    app: application-contract-service
  ports:
    - name: http
      port: 8083
      targetPort: 8083
