smartfreelance-backend/application-contract-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-contract-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: contract.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application-contract-service
                port:
                  number: 8083
